Fix big photo height being too big

--- a/phostren-frontend/css/site.css
+++ b/phostren-frontend/css/site.css
@@ -23,5 +23,5 @@ h2 {
 
 .big_photo {
     width: auto;
-    height: 1920px;
+    height: 1080px;
 }
